<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">
        Bilingual Subtitle Viewer
    </string>

    <string name="open_subtitle">
        Open SRT
    </string>

    <string name="no_file">
        No file
    </string>

    <string name="no_subtitle">
        Open a subtitle file
    </string>

    <string name="previous">
        Previous
    </string>

    <string name="next">
        Next
    </string>

</resources>
